@@ -124,7 +124,7 @@ class QtstalkerApp : public QMainWindow
     void slotHideMainPlot (bool);
     void slotPlotDate (bool);
     void slotPlotLeftMouseButton (int, int, bool);
-    void slotPlotKeyPressed (Qt::Key);
+    void slotPlotKeyPressed (QKeyEvent *);
 
   private:
     QPopupMenu *fileMenu;
@@ -181,5 +181,5 @@ class QtstalkerApp : public QMainWindow
     QMultiLineEdit *infoLabel;
 };
 
-#endif 
+#endif
 
